# SkyDragon-VPN

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .mcp.json  README.MD  docker-compose.dev.yml  docker-compose.dev.yml~  docker-compose.staging.yml  docker-compose.yml  docker-compose.yml~  nginx.conf  nginx.conf~  nginx.dev.conf  nginx.dev.conf~  nginx.staging.conf  nginx~
backend/: .env.example  Dockerfile  app.py  app.py~  config.yaml  get_sub.py  get_sub.py~  pyproject.toml  requirements.txt  server.py  server.py~  ssh_tunnel_manager.py  ssh_tunnel_manager.py~  sub_fetcher.py
backend/cfg/: config.py
backend/db/: db.py  methods.py  methods.py~
backend/models/: models.py  models.py~
backend/src/: app.py
backend/templates/: import_open.html  subscription_import.html
backend_v2/: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.dev.yml  docker-compose.yml  nginx.conf  nginx.dev.conf  pyproject.toml
backend_v2/migrations/: 20260409_01_baseline_subscriptions.rollback.sql  20260409_01_baseline_subscriptions.sql  20260410_01_site_accounts_telegram_links.rollback.sql  20260410_01_site_accounts_telegram_links.sql  20260412_01_init.rollback.sql  20260412_01_init.sql
backend_v2/src/: main.py
telegram_bot/: Dockerfile  main.py  main.py~  pyproject.toml  requirements.txt  requirements.txt~
telegram_bot/alembic/: env.py
telegram_bot/config_data/: config.py  config.py~
telegram_bot/database/: context_manager.py  context_manager.py~  db_methods.py  db_methods.py~  init_db.py  init_db.py~
telegram_bot/filters/: admin.py
telegram_bot/keyboards/: kb_inline.py  kb_inline.py~  set_menu.py
telegram_bot/lexicon/: lexicon_ru.py  lexicon_ru.py~
telegram_bot/logger/: logging_config.py  logging_config.py~
telegram_bot/middleware/: logging_middleware.py  logging_middleware.py~  trottling.py  trottling.py~
telegram_bot/migrations/: 20260213_01_add_server_api_fields.sql  20260214_01_ensure_servers_columns.sql  README.md
telegram_bot/models/: models.py  models.py~
telegram_bot/scripts/: add_keys_in_profile.py  add_keys_in_profile.py~  apply_migration.py  backup_scripts.py  backup_scripts.py~  restore_db.sh  update_config_link.py  update_config_link.py~  update_keys.py  update_profile.py  update_profile.py~
telegram_bot/state/: state.py
telegram_bot/tests/: test_replace_app.py  test_replace_server.py  test_start_command.py  test_support_command.py
telegram_bot/utils/: admin_activity_log.py  check_connect_to_vpn.py  check_connect_to_vpn.py~  check_double_connect.py  check_servers.py  encode_link.py  (+12 more)
(+365 files in other folders)
