[project]
name = "skydragon-backend"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn[standard]>=0.31.0",
    "sqlalchemy[asyncio]>=2.0.34,<3",
    "asyncpg>=0.29.0",
    "environs>=11.0.0",
    "cryptography>=43.0.0",
    "aiohttp>=3.10.0",
    "jinja2>=3.1.0",
    "yookassa>=3.4.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
