[project]
name = "telegram-bot"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
# Только прямые зависимости; остальное подтянет uv и зафиксирует в uv.lock
dependencies = [
    "aiogram>=3.13.1,<3.14",
    "aiohttp-socks>=0.8.0",
    "sqlalchemy[asyncio]>=2.0.34,<3",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2,<2",
    "environs>=11.0.0",
    "cryptography>=43.0.0",
    "requests>=2.32.0",
    "yookassa>=3.4.0",
    "pytz>=2025.1",
    "psycopg2-binary>=2.9.9",
]

[tool.uv]
package = false
